--- a/Fundraising/wwwroot/ProductPage/creditcard.html
+++ b/Fundraising/wwwroot/ProductPage/creditcard.html
@@ -16,6 +16,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.1/axios.min.js"></script>
 
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <style>
         * {
             margin: 0;
@@ -167,7 +169,7 @@
                     </p>
                 </div>
                 <div style="text-align: center;">
-                    <input id="pay" type="button" value="立即付款" v-on:click="payclick" style="border: #047c51 solid 2px;
+                    <input class="payok" id="pay" type="button" value="立即付款" v-on:click="payclick" style="border: #047c51 solid 2px;
                     background-color: #047c51;
                     color: white; padding: 6px 10px;">
                 </div>
@@ -179,7 +181,10 @@
 
     <script src="../layout/layout.js"></script>
     <script>
-
+        document.querySelector('.payok').addEventListener("click", function () {
+            alert(123);
+            /*swal("Good job!", "You clicked the button!", "success");*/
+        });
 
         var app = new Vue({
             el: ".app",
@@ -224,7 +229,9 @@
                             console.log(this.data);
                         },
                         success: function () {
-                            alert("成功");
+                            swal("付款成功!", "感謝您的購買!", "success").then((value) =>
+                            { window.location = "./mymainpage.html"});;
+                           /* alert("成功");*/
                         }
                     })
                 }
