--- a/Fundraising/wwwroot/ProductPage/orderpay.html
+++ b/Fundraising/wwwroot/ProductPage/orderpay.html
@@ -76,143 +76,150 @@
         }
     } */
     /* 發光字 */
+
+    .coverphoto {
+        height: 200px;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50%;
+        background-position: center;
+        padding-bottom: 56.25%;
+        position: relative;
+    }
 </style>
 
 <body>
-    <div class="container">
-        <!-- 標題 -->
-        <div class="row">
+    <div class="pay">
+        <div class="container">
+            <!-- 標題 -->
+            <div class="row">
 
-            <!--左邊欄位-->
-            <div class="col-sm-5">
-                <div style="height: 200px; background-size: cover;
-                background-repeat: no-repeat;
-                background-position:50%;
-                background-position: center;
-                padding-bottom:56.25%;
-                position:relative;
-                background-image: url('./page.png');"></div>
-            </div>
-
-            <!--右邊欄位-->
-            <div class="col-sm-7">
-                <div>
-                    <br>
-                    <a style="color: black; text-decoration:none;" href="./product.html">
-                        <h4>POIEMA Evo 空氣淨化器｜大口呼吸．淨化革命</h4>
-                    </a>
+                <!--左邊欄位-->
+                <div class="col-sm-5">
+                    <div class="coverphoto"
+                         :style="{'background-image':'url(' + productList[0].coverphoto + ')'}"></div>
                 </div>
-                <div>
-                    <span>提案人 </span><span><a style="text-decoration:none;" href="#">Hunter</a></span>
-                </div>
-                <br>
-                <div>
-                    <span style="font-weight: bold; font-size: 20px;">NT$220,000</span><span> / 目標 NT$100,000</span>
-                </div>
-            </div>
-            <hr>
-        </div>
-    </div>
-
-
-    <br>
-
-    <div class="pay container">
-        <!-- 標題 -->
-        <div class="row">
-
-            <!--左邊欄位-->
-            <div class="col-sm-4">
-                <div>
-                    <h4>贊助項目{{fliterList[0].projectTitle}}</h4>
-                </div>
-
-                <div style="border: solid wheat;">
-                    <div style="width: 90%; margin: auto;">
-                        <a href="#" style="text-decoration:none; color: black;">
-                            <div style="text-align: center;">
-                                <img src="./photo/plan.png" style="width: 100%;">
-                            </div>
-                            <div><h4>NT${{fliterList[0].planPrice | money}}</h4></div>
-                            <div><span>方案內容</span></div>
-                            <hr>
+                <!--右邊欄位-->
+                <div class="col-sm-7">
+                    <div>
+                        <br>
+                        <a style="color: black; text-decoration:none;" href="./product.html">
+                            <h4>{{productList[0].producttitle}}</h4>
                         </a>
-
                     </div>
-                </div>
-                <br>
-                <br>
-                <div class="d-flex justify-content-between">
-                    <span>專案金額</span><span style="text-align: right;" class='text-end'>NT$ {{fliterList[0].planPrice | money}}</span>
-                </div>
-                <div class="d-flex justify-content-between" style="display:none">
-                    <span>加碼贊助</span><span style="text-align: right;" class='text-end'>NT$ {{AddSponsorshipValue | money}}</span>
+                    <div>
+                        <span>提案人 </span><span><a style="text-decoration:none;" href="#">{{productList[0].username}}</a></span>
+                    </div>
+                    <br>
+                    <div>
+                        <span style="font-weight: bold; font-size: 20px;">NT${{productList[0].currentamount | money}}</span><span> / 目標 NT${{productList[0].targetamount | money}}</span>
+                    </div>
                 </div>
                 <hr>
-                <div class="d-flex justify-content-between">
-                    <span>總價</span><span style="text-align: right;" class='text-end'>NT$ {{Number(fliterList[0].planPrice)+Number(AddSponsorshipValue) | money}}</span>
-                </div>
             </div>
-            <div class="col-sm-1">
+        </div>
 
-            </div>
 
-            <!--右邊欄位-->
-            <div class="col-sm-7">
-                <div>
+        <br>
+
+        <div class="container">
+            <!-- 標題 -->
+            <div class="row">
+
+                <!--左邊欄位-->
+                <div class="col-sm-4">
                     <div>
-                        <h4>付款資料</h4>
+                        <h4>贊助項目 :</h4>
+                    </div>
+
+                    <div style="border: solid wheat;">
+                        <div style="width: 90%; margin: auto;">
+                            <a href="#" style="text-decoration:none; color: black;">
+                                <div class="mb-1" style="text-align: center;">
+                                    <img :src="fliterList[0].planphoto" style="width: 100%;">
+                                </div>
+                                <div class="mb-3"><h5>{{fliterList[0].projectTitle}}</h5></div>
+                                <div class="mb-4"><h4>NT${{fliterList[0].planPrice | money}}</h4></div>
+                                <div><p style="white-space: pre-wrap;">{{fliterList[0].plancontent}}</p></div>
+                                <hr>
+                            </a>
+
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="d-flex justify-content-between">
+                        <span>專案金額</span><span style="text-align: right;" class='text-end'>NT$ {{fliterList[0].planPrice | money}}</span>
+                    </div>
+                    <div class="d-flex justify-content-between" style="display:none">
+                        <span>加碼贊助</span><span style="text-align: right;" class='text-end'>NT$ {{AddSponsorshipValue | money}}</span>
+                    </div>
+                    <hr>
+                    <div class="d-flex justify-content-between">
+                        <span>總價</span><span style="text-align: right;" class='text-end'>NT$ {{Number(fliterList[0].planPrice)+Number(AddSponsorshipValue) | money}}</span>
                     </div>
                 </div>
+                <div class="col-sm-1">
 
-                <div>
-                    <form>
-                        <div class="mb-3">
-                            <label for="formGroupExampleInput2" class="form-label">加碼贊助 (選擇)</label>
-                            <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
-                            <div class="input-group">
-                                <div class="input-group-text" style="background-color:white">NT$</div>
-                                <input type="number" class="form-control" id="autoSizingInputGroup" v-model="AddSponsorshipValue">
+                </div>
+
+                <!--右邊欄位-->
+                <div class="col-sm-7">
+                    <div>
+                        <div>
+                            <h4>付款資料</h4>
+                        </div>
+                    </div>
+
+                    <div>
+                        <form>
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput2" class="form-label">加碼贊助 (選擇)</label>
+                                <label class="visually-hidden" for="autoSizingInputGroup">Username</label>
+                                <div class="input-group">
+                                    <div class="input-group-text" style="background-color:white">NT$</div>
+                                    <input type="number" class="form-control" id="autoSizingInputGroup" v-model="AddSponsorshipValue">
+                                </div>
                             </div>
-                        </div>
-                        <div class="row mb-3">
-                            <div class="col-9">
-                                <label for="formGroupExampleInput" class="form-label">收件地址</label>
-                                <input v-model="orderpayList.RecipientAddress" type="text" class="form-control" id="formGroupExampleInput" placeholder="請填寫詳細地址">
+                            <div class="row mb-3">
+                                <div class="col-9">
+                                    <label for="formGroupExampleInput" class="form-label">收件地址</label>
+                                    <input v-model="orderpayList.RecipientAddress" type="text" class="form-control" id="formGroupExampleInput" placeholder="請填寫詳細地址">
+                                </div>
+                                <div class="col-3">
+                                    <label for="formGroupExampleInput" class="form-label">郵遞區號</label>
+                                    <input v-model="orderpayList.PostCode" type="text" class="form-control" id="formGroupExampleInput" placeholder="區號">
+                                </div>
                             </div>
-                            <div class="col-3">
-                                <label for="formGroupExampleInput" class="form-label">郵遞區號</label>
-                                <input v-model="orderpayList.PostCode" type="text" class="form-control" id="formGroupExampleInput" placeholder="區號">
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput" class="form-label">姓名</label>
+                                <input v-model="orderpayList.RecipientName" type="text" class="form-control" id="formGroupExampleInput" placeholder="請填寫真實姓名">
                             </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="formGroupExampleInput" class="form-label">姓名</label>
-                            <input v-model="orderpayList.RecipientName" type="text" class="form-control" id="formGroupExampleInput" placeholder="請填寫真實姓名">
-                        </div>
-                        <div class="mb-3">
-                            <label for="formGroupExampleInput2" class="form-label">連絡電話</label>
-                            <input v-model="orderpayList.RecipientPhone" type="text" class="form-control" id="formGroupExampleInput2" placeholder="請填寫常用電話，以利提案團隊聯繫">
-                        </div>
-                        <div class="mb-3">
-                            <label for="formGroupExampleInput2" class="form-label">連絡信箱</label>
-                            <input v-model="orderpayList.RecipientMail" type="text" class="form-control" id="formGroupExampleInput2" placeholder="請填寫常用信箱，以利提案團隊聯繫">
-                        </div>
-                        <div class="mb-3">
-                            <label for="formGroupExampleInput2" class="form-label">備註</label>
-                            <input v-model="orderpayList.Note" type="text" class="form-control" id="formGroupExampleInput2" placeholder="填寫備註 ( 請參考計畫內容說明，非必填 )">
-                        </div>
-                        <div class="col-12">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="gridCheck">
-                                <label class="form-check-label" for="gridCheck">
-                                    我已閱讀並同意咱的服務條款與隱私權政策。
-                                </label>
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput2" class="form-label">連絡電話</label>
+                                <input v-model="orderpayList.RecipientPhone" type="text" class="form-control" id="formGroupExampleInput2" placeholder="請填寫常用電話，以利提案團隊聯繫">
+                            </div>
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput2" class="form-label">連絡信箱</label>
+                                <input v-model="orderpayList.RecipientMail" type="text" class="form-control" id="formGroupExampleInput2" placeholder="請填寫常用信箱，以利提案團隊聯繫">
+                            </div>
+                            <div class="mb-3">
+                                <label for="formGroupExampleInput2" class="form-label">備註</label>
+                                <input v-model="orderpayList.Note" type="text" class="form-control" id="formGroupExampleInput2" placeholder="填寫備註 ( 請參考計畫內容說明，非必填 )">
                             </div>
                             <div class="col-12">
-                                <input type="button" class="appo btn btn-primary" value="立刻贊助" v-on:click="okButtonClick"><!--onclick="okButtonClick()"-->
+                                <div class="mb-2 form-check">
+                                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                                    <label class="form-check-label" for="gridCheck">
+                                        我已閱讀並同意咱的服務條款與隱私權政策。
+                                    </label>
+                                </div>
+                                <div class="col-12">
+                                    <input type="button" class="appo btn btn-primary" value="立刻贊助" v-on:click="okButtonClick"><!--onclick="okButtonClick()"-->
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -237,18 +244,25 @@
         var app = new Vue({
             el: ".pay",
             data: {
+                productList: [],
                 AddSponsorshipValue: 0,
                 fliterList: [],
                 orderpayList: {}
             },
             mounted: function () {
-                //alert(123)
-                //document.querySelector('.wid').style.width = '10%'
+                $.ajax({
+                    type: 'Get',
+                    url: '/api/Fundraising/prduct/' + sessionStorage.getItem("productId"),
+                    success: function (e) {
+                        app.productList = e
+                    }
+                })
                 $.ajax({
                     type: 'Get',
                     url: '/api/Fundraising/orderpay/' + sessionStorage.getItem("planId"),
                     success: function (e) {
                         app.fliterList = e
+                        console.log(e);
                     }
                 })
             },
