--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -160,7 +160,7 @@
                     id="content" role="tabpanel" aria-labelledby="content-tab">
                     <div class="boldfont">介紹你的專案，告訴人們為什麼他們應該對你的專案感到興奮。</div>
 
-                    <div style="text-align: left;" id="container">
+                    <div style="text-align: left; padding-top: 20px;" id="container">
                         <span class="dot">●</span>
                         <label class="boldfont" for="ProductContent">專案內容</label>
                         <textarea style="resize: none;" id="ProductContent" name="ProductContent"></textarea>
