--- a/Fundraising/wwwroot/Proposal/proposal.html
+++ b/Fundraising/wwwroot/Proposal/proposal.html
@@ -156,14 +156,14 @@
                 </div>
 
                 <!-- 專案內容 -->
-                <div style="width: 110%; position: relative; right: 60px;" class="card tab-pane fade lidivborder"
+                <div style="width: 130%; position: relative; right: 140px;" class="card tab-pane fade lidivborder"
                     id="content" role="tabpanel" aria-labelledby="content-tab">
                     <div class="boldfont">介紹你的專案，告訴人們為什麼他們應該對你的專案感到興奮。</div>
 
                     <div style="text-align: left; padding-top: 20px;" id="container">
                         <span class="dot">●</span>
                         <label class="boldfont" for="ProductContent">專案內容</label>
-                        <textarea style="resize: none;" id="ProductContent" name="ProductContent"></textarea>
+                        <textarea id="ProductContent" name="ProductContent"></textarea>
                     </div>
                     <br>
                     <div id="QAdiv" style="text-align: left;">
@@ -402,6 +402,7 @@
         </div>
 </body>
 </form>
+
 
 
 <!-- 頁籤切換 -->
