--- a/Fundraising/wwwroot/MemberCentre/OtherInfo.html
+++ b/Fundraising/wwwroot/MemberCentre/OtherInfo.html
@@ -163,7 +163,7 @@
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
       crossorigin="anonymous"
     ></script>
-    <script src="../layout/membercentre_layout.js"></script>
+    <script src="../layout/layout.js"></script>
     <script src="./Js_src/UserInfo.js"></script>
   </body>
 </html>
