--- a/Fundraising/wwwroot/MemberCentre/UserFollowing.html
+++ b/Fundraising/wwwroot/MemberCentre/UserFollowing.html
@@ -58,6 +58,7 @@
         <h5>追蹤專案</h5>
       </div>
       <div class="card mx-auto mt-3" id="app">
+        <loading :active.sync="isLoading"></loading>
         <div class="row m-3" v-if="myfollow.length>0">
           <div class="following col-4 my-3" v-for="item in myfollow">
             <img :src="item.photo" alt="product" />
@@ -71,7 +72,9 @@
             </button>
           </div>
         </div>
-        <h4 v-else class="text-center my-5">目前沒有專案，立即去探索！</h4>
+        <h4 v-else class="text-center my-5">
+          目前沒有專案，立即去<a href="../productpage/filter.html">探索</a>！
+        </h4>
       </div>
     </div>
     <script
