--- a/Fundraising/wwwroot/CMS/Plist.html
+++ b/Fundraising/wwwroot/CMS/Plist.html
@@ -117,7 +117,7 @@
                                                                     class="btn btn-outline-success mr-3"
                                                                     v-on:click="checkmenber(item.p.productId)">編輯 </a> -->
                                                                     <a href="./PdetailsView.html"
-                                                                        class=""
+                                                                        class="btn btn-outline-success"
                                                                         v-on:click="checkmenber(item.p.productId)">查看</a>
                                                                 </div>
                                                             </td>
