--- a/Fundraising/wwwroot/CMS/Preview.html
+++ b/Fundraising/wwwroot/CMS/Preview.html
@@ -97,7 +97,7 @@
                                                                     class="" alt="" style="width:100%"></td>
                                                             <td v-cloak>{{item.p.productTitle}}</td>
                                                             <td v-cloak>{{item.p.productStateId}}</td>
-                                                            <td v-cloak><a href="./PdetailsEdit.html" class=""
+                                                            <td v-cloak><a href="./PdetailsEdit.html" class="btn btn-outline-success"
                                                                     v-on:click="checkmenber(item.p.productId)">審核</a>
                                                             </td>
                                                         </tr>
