--- a/Fundraising/wwwroot/Proposal/myproposal.html
+++ b/Fundraising/wwwroot/Proposal/myproposal.html
@@ -257,14 +257,14 @@
                     .then((value) => {
                         switch (value) {
                             case "確定":
-                                window.location = "https://localhost:44398/Login/login.html";
+                                window.location = "../Login/login.html";
                                 break;
                             case "取消":
                                 break;
                         }
                     });
             } else {
-                window.location = "https://localhost:44398/Proposal/proposal.html";
+                window.location = "../Proposal/proposal.html";
             }
         }
     </script>
